Incident widget added

--- a/MAF/index.html
+++ b/MAF/index.html
@@ -9,7 +9,7 @@
     <!-- <link rel="stylesheet" type="text/css" href="./node_modules/react-grid-layout/css/styles.css"> -->
     <!-- <link rel="stylesheet" type="text/css" href="./node_modules/react-resizable/css/styles.css"> -->
 
-    <link rel="stylesheet" type="text/css" href="https://uxp.s3.amazonaws.com/dist/master/uxp_dashboard.css">
+    <link rel="stylesheet" type="text/css" href="https://uxp.s3.amazonaws.com/dist/dev/uxp_dashboard.css">
 
 
     <title>UXP Development Environment</title>
@@ -19,14 +19,18 @@
     <div id="root"></div>
 
     <!-- Dependencies -->
-    <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+    <!-- <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script> -->
+
+    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+
 
     <script crossorigin src="https://unpkg.com/prop-types/prop-types.min.js"></script>
     <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/recharts/1.8.5/Recharts.min.js"></script>
 
     <!-- Main -->
-    <script src="https://uxp.s3.amazonaws.com/dist/master/main.js"></script>
+    <script src="https://uxp.s3.amazonaws.com/dist/dev/main.js"></script>
 
     <script>
 
